Corrected fences positions for perfect alignment

--- a/styles/index.css
+++ b/styles/index.css
@@ -165,7 +165,7 @@ button:hover~label {
     background-repeat: no-repeat;
     background-size: fill;
     display: grid;
-    grid-template-rows: 100px 1fr 1fr 1fr;
+    grid-template-rows: 100px 1fr 100px 1fr 100px 1fr;
 }
 
 .deployment h2 {
@@ -186,18 +186,11 @@ button:hover~label {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-.grid-deploiement:nth-child(2) {
+.fence {
     background-image: url(../media/fence.png);
     background-size: 100px 50px;
     background-repeat: repeat-x;
-    background-position: bottom;
-}
-
-.grid-deploiement:nth-child(4) {
-    background-image: url(../media/fence.png);
-    background-size: 100px 50px;
-    background-repeat: repeat-x;
-    background-position: top;
+    background-position: center;
 }
 
 .deploiement-interne {
